# mirl_extensions_math

./: Cargo.toml  README.md
src/: lib.rs
src/traits/: bigfloat.rs  bigint.rs  mod.rs  tests.rs
src/traits/consts/: bytes.rs  mod.rs
src/traits/consts/supports_range/: mod.rs  range_1024.rs  range_128.rs  range_2048.rs  range_256.rs  range_4096.rs  range_512.rs
src/traits/functions/: abs.rs  add_sign.rs  angular_conversion.rs  ceil.rs  clamp.rs  exp2.rs  floor.rs  fract.rs  hypot.rs  i_give_up_with_the_naming.rs  interpolate_colors.rs  interpolate_values.rs  is_power_of_two.rs  log10.rs  log2.rs  map_to_sign.rs  math_rotation.rs  mod.rs  mul_add.rs  natural_exp.rs  natural_log.rs  next_power_of_two.rs  next_power_of_two_as_exponent.rs  next_up_down.rs  normalize_vector.rs  previous_power_of_two.rs  round.rs  saturating_abs.rs  saturating_add.rs  saturating_div.rs  saturating_mul.rs  saturating_negative.rs  saturating_sub.rs  sqrt.rs  trunc.rs  uniform_previous_next.rs  wrapping_ops.rs
